# gwindow

./: .Makefile.swp  .gitignore  Makefile  Makefile.am  Makefile.old  README.md  configure.ac  gwindow.o.mech.math.msu.su.10469.Lp5Vi4
R2Graph/: Makefile  R2Graph.o.mech.math.msu.su.29994.fqUnYT
gwindow/: Makefile.am  gwindow.cpp  gwindow.h
include/: gwindow.h
r2graph/: Makefile.am  Makefile.old
samples/: Makefile.am  bezier.cpp  clock.cpp  cursTst.cpp  func.cpp  grtst.cpp  mondrian.cpp  react.cpp
src/: func.cpp
