noinst_PROGRAMS = func # bezier clock cursTst func grtst mondrian react
AM_CXXFLAGS = -I${top_srcdir}/gwindow -I${top_srcdir}/r2graph
LDADD = ../gwindow/gwindow.o ../r2graph/R2Graph.o
AM_LDFLAGS = -lxcb -lxcb-util -lxcb-keysyms
#bezier_SOURCES = bezier.cpp
#clock_SOURCES = clock.cpp
#cursTst_SOURCES = cursTst.cpp
func_SOURCES = func.cpp
#grtst_SOURCES = grtst.cpp
#mondrian_SOURCES = mondrian.cpp
#react_SOURCES = react.cpp
#react_LDFLAGS = -lX11 -lrt
